[gd_scene load_steps=7 format=3 uid="uid://bronocnxpm18e"]

[ext_resource type="Script" path="res://Enemy_4.gd" id="1_mgl1c"]
[ext_resource type="PackedScene" uid="uid://2i6g1sgcwre4" path="res://UI/HealthBar/healthbar_enemy.tscn" id="2_j73my"]
[ext_resource type="Texture2D" uid="uid://dimjxxsh1s2dw" path="res://Asset/Space Shooter Redux/PNG/Parts/gun01.png" id="3_qqguu"]
[ext_resource type="Texture2D" uid="uid://j0vlvdjo7dct" path="res://Asset/Space Shooter Redux/PNG/Enemies/enemyBlack3.png" id="4_3qswu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7dxhg"]
radius = 34.0147

[sub_resource type="CircleShape2D" id="CircleShape2D_iiiv6"]

[node name="Enemy_4" type="CharacterBody2D" groups=["Damageable", "Enemy4"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_mgl1c")
points = 400

[node name="Healthbar_enemy" parent="." instance=ExtResource("2_j73my")]
offset_left = -47.0
offset_top = 30.0
offset_right = 15.0
offset_bottom = 34.0
rotation = -1.57611

[node name="Gun" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Gun"]
position = Vector2(18, -20)
rotation = -1.5708
texture = ExtResource("3_qqguu")

[node name="Marker2D" type="Marker2D" parent="Gun/Sprite2D"]
visible = false
position = Vector2(-1.90735e-06, 18)

[node name="Sprite2D2" type="Sprite2D" parent="Gun"]
position = Vector2(19, 21)
rotation = -1.5708
texture = ExtResource("3_qqguu")

[node name="Marker2D2" type="Marker2D" parent="Gun/Sprite2D2"]
visible = false
position = Vector2(1, 17)

[node name="Raycast" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Raycast"]
position = Vector2(35, 0)
rotation = -1.5708
target_position = Vector2(0, 200)

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5708
texture = ExtResource("4_3qswu")

[node name="Projectile" type="Node2D" parent="."]
position = Vector2(-1, -4)

[node name="Left" type="Node2D" parent="Projectile"]
position = Vector2(40, -16)

[node name="Right" type="Node2D" parent="Projectile"]
position = Vector2(39, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -4)
shape = SubResource("CircleShape2D_7dxhg")

[node name="Detection Area" type="Node2D" parent="."]
visible = false
rotation = 1.5708

[node name="FirstDetection" type="Area2D" parent="Detection Area"]
visible = false
rotation = -1.5708
scale = Vector2(20, 20)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection Area/FirstDetection"]
visible = false
scale = Vector2(30, 30)
shape = SubResource("CircleShape2D_iiiv6")

[node name="SecondDetection" type="Area2D" parent="Detection Area"]
visible = false
rotation = -1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection Area/SecondDetection"]
visible = false
scale = Vector2(15, 15)
shape = SubResource("CircleShape2D_iiiv6")

[node name="TimerDelayFire" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-3.5, 0.999996)
scale = Vector2(4.75, 5.6)

[connection signal="body_entered" from="Detection Area/FirstDetection" to="." method="_on_first_detection_body_entered"]
[connection signal="body_exited" from="Detection Area/FirstDetection" to="." method="_on_first_detection_body_exited"]
